--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ category: blog-index
 		{% assign year = y %}
 		<span class="listing-seperator">{{ y }}</span>
 	  {% endif %}
-    <a class='post-link-in-posts' href="{{ site.url }}{{ post.url }}">
+    <a class='post-link-in-posts' href="{{ post.url }}">
         <span class='date'>{{ post.date | date: "%b %d" }}</span>
         <span class='article'>{{ post.title }}</span>
 		<div class="tag-in-index-post">
