--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: 苏南生的博客
 category: blog-index
 ---
 
-<link rel="stylesheet" href="../css/blog.css">
+<link rel="stylesheet" href="/css/blog.css">
 
  {% include post_menu.html %}
  
